# proespm-py3

./: .gitignore  404.html  Makefile  Pipfile  README.md  build.bat  config.json  index.html  justfile  mkdocs.yml  objects.inv  pyinstaller_main.py  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/workflows/: pages.yml  release.yml  test.yml
api/measurement/: index.html
docs/: extend.md  index.md  installation.md  usage.md
docs/api/: measurement.md
extend/: index.html
installation/: index.html
proespm-py3/: aes.py  config.py  file_import.py  gui.py  html_rendering.py  image.py  proespm_py3.py  qcmb.py  xps.py
proespm-py3/stm/: __init__.py  stm.py  stm_flm.py  stm_matrix.py  stm_mul.py  stm_sm4.py  stm_sxm.py
proespm-py3/templates/: aes.jinja  base_template.jinja  image.jinja  qcmb.jinja  slideshow.js  stm_fw_bw.jinja  stm_mul.jinja  style.css  top_button.js  xps_scan.jinja
proespm_py3/: aes.py  config.py  ec4.py  ec_labview.py  file_import.py  gui.py  html_rendering.py  image.py  labjournal.py  proespm_py3.py  prompts.py  qcmb.py  xps.py
proespm_py3/ec/: __init__.py  ec.py  ec4.py  ec_labview.py
proespm_py3/stm/: __init__.py  sm4.py  stm.py  stm_flm.py  stm_matrix.py  stm_mul.py  stm_nid.py  stm_sm4.py  stm_sxm.py
proespm_py3/templates/: aes.jinja  base_template.jinja  dark_mode.js  ec4.jinja  image.jinja  modal.js  overview.js  qcmb.jinja  stm_fw_bw.jinja  stm_mul.jinja  style.css  top_button.js  xps_scan.jinja
promulstm/: aes.py  config.py  gui.py  html.py  html_rendering.py  image.py  mul.py  promulstm.py  qcmb.py  stm.py  stm_flm.py  stm_matrix.py  stm_mul.py  stm_rhk.py  stm_sm4.py  stm_sxm.py  template.html  xps.py  xps_hippie.py
promulstm/template/: slideshow.js  style.css  template.html
promulstm/templates/: aes.jinja  base_template.jinja  stm_matrix.jinja  stm_mul.jinja  stm_sm4.jinja  top_button.js  xps_scan.jinja
search/: search_index.json
src/proespm/: cli.py  config.py  fileinfo.py  gui.py  labjournal.py  main.py  measurement.py  processing.py
src/proespm/ec/: ec.py  ec4.py  ec_labview.py  nordic_ec4.py
src/proespm/fastspm/: atom_tracking.py  error_topography.py  fast_scan.py  fastspm.py  high_speed.py  resonance_frequency.py  slow_image.py
src/proespm/misc/: elab_ftw.py  image.py  qcmb.py  rga.py  tpd.py
src/proespm/spectroscopy/: aes_staib.py  xps_eis.py
src/prosurf/: __init__.py  gui.py  html_rendering.py  main.py  processing.py  qcmb.py
test/: 1_lab_journal.xlsx  20201111--4_1.I_mtrx  20201111--4_1.Z_mtrx  20201111_0001.mtrx  Magnetite_1_0016.txt  aes-staib-vms.vms  aes-staib.vms  lab_journal.xlsx
tests/: test_aes.py  test_ec4.py  test_fastspm.py  test_misc.py  test_processing.py  test_proespm.py  test_stm.py
tests/test_files/: 1_lab_journal.xlsx  1_lab_journal_new.xlsx  CA_Pulse-Time-4_01.txt  CV_103345_ 2.txt  CV_50mvs_001.lvm  FFT_231013_001.csv  FFT_test.lvm  afm-nanosurf-nid.nid  stm-aarhus-mul-a.mul  stm-nanonis-sxm.sxm  stm-nanosurf-nid.nid
tests/testdata/: 20260205_CeO2_Annealed_Al Normal.txt  CA_231013_001.csv  CV_153605_ 2.txt  CV_231013_001.csv  CV_251010_001.csv  NAP-STM_16450.json  PS241105-1.csv  PS241105-13.csv  UHV-STM-A_1001.json  elabFTW_example_export.json  elabFTW_example_export__human-readable.json  measurement1.lvm  rga-massscan-test.txt  rga-timeseries-test.txt  stm-aarhus-mul-b.mul  xps-eis.txt
usage/: index.html
(+74 files in other folders)
