[project]
name = "proespm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matkrin", email = "matkrin@protonmail.com" }
]
dependencies = [
    "access2thematrix>=0.4.4",
    "numpy>=2.0.0",
    "vamas>=0.1.1",
    "rich>=13.7.1",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "matplotlib-scalebar>=0.8.1",
    "bokeh==3.5.0",
    "pyqt6>=6.7.0",
    "nanonispy @ git+https://github.com/matkrin/nanonispy",
    "opencv-python>=4.10.0.84",
    "sm4file>=0.1.0",
    "mulfile>=0.4.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "pyinstaller>=6.9.0",
]

[tool.ruff]
line-length = 80

[tool.basedpyright]
typeCheckingMode = "all"
reportUntypedFunctionDecorator = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/proespm"]

