[project]
name = "proespm"
version = "0.2.1"
description = "Add your description here"
authors = [
    { name = "matkrin", email = "matkrin@protonmail.com" }
]
dependencies = [
    "access2thematrix>=0.4.4",
    "numpy>=2.4.4",
    "vamas>=0.2.0",
    "rich>=15.0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "matplotlib-scalebar>=0.9.0",
    "bokeh==3.9.0",
    "pyqt6>=6.11.0",
    "nanonispy @ git+https://github.com/matkrin/nanonispy",
    "opencv-python>=4.13.0.92",
    "sm4file>=0.1.0",
    "mulfile>=0.4.0",
    "h5py>=3.16.0",
    "pillow>=12.2.0",
    "beautifulsoup4>=4.14.3",
]
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyinstaller>=6.9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "ruff>=0.15.5",
    "ty>=0.0.32",
]

[project.scripts]
proespm = "proespm.cli:run_cli"

[tool.ruff]
line-length = 80

[tool.basedpyright]
typeCheckingMode = "all"
reportUntypedFunctionDecorator = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/proespm"]

